Fix bugs with map on mobile devices plus fix copyright section styles

--- a/src/Copyright/Copyright.scss
+++ b/src/Copyright/Copyright.scss
@@ -1,7 +1,11 @@
 .copyright {
-  padding-top: 32px;
+  padding-top: 16px;
   padding-bottom: 24px;
   background-color: #f4f4d5;
   color: #000;
   font-family: 'Poppins', sans-serif !important;
+
+  @media screen and (max-width: 900px) {
+    padding-top: 0;
+  }
 }
